@@ -1784,11 +1784,6 @@
             </dependency>
             <dependency>
                 <groupId>org.wildfly.security</groupId>
-                <artifactId>wildfly-elytron-credential-source-deprecated</artifactId>
-                <version>${version.org.wildfly.security.elytron}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.wildfly.security</groupId>
                 <artifactId>wildfly-elytron-credential-source-impl</artifactId>
                 <version>${version.org.wildfly.security.elytron}</version>
             </dependency>
@@ -1969,11 +1964,6 @@
             </dependency>
             <dependency>
                 <groupId>org.wildfly.security</groupId>
-                <artifactId>wildfly-elytron-sasl-deprecated</artifactId>
-                <version>${version.org.wildfly.security.elytron}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.wildfly.security</groupId>
                 <artifactId>wildfly-elytron-sasl-digest</artifactId>
                 <version>${version.org.wildfly.security.elytron}</version>
             </dependency>
@@ -2060,11 +2050,6 @@
             <dependency>
                 <groupId>org.wildfly.security</groupId>
                 <artifactId>wildfly-elytron-x500-cert-util</artifactId>
-                <version>${version.org.wildfly.security.elytron}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.wildfly.security</groupId>
-                <artifactId>wildfly-elytron-x500-deprecated</artifactId>
                 <version>${version.org.wildfly.security.elytron}</version>
             </dependency>
             <dependency>
@@ -2347,8 +2332,11 @@
                 <!-- match 9+ -->
             </activation>
             <properties>
-                <modular.jdk.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    --add-modules=java.se</modular.jdk.args>
+              <modular.jdk.args>
+		--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+	        --add-opens=java.base/java.security=ALL-UNNAMED
+                --add-modules=java.se
+	      </modular.jdk.args>
             </properties>
         </profile>
         <!--
